infrastructure/main.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "2.0.0.0",
  "parameters": {
    "location": { "type": "string", "defaultValue": "eastus2" },
    "env": { "type": "string", "allowedValues": ["dev", "staging", "prod"], "defaultValue": "dev" },

    "zones": {
      "type": "array",
      "defaultValue": ["1", "2"],
      "metadata": { "description": "Availability Zones to use in regions that support zones (e.g., eastus2)." }
    },

    "vnetAddressPrefix": { "type": "string", "defaultValue": "10.10.0.0/16" },
    "subnetPublicPrefix": { "type": "string", "defaultValue": "10.10.1.0/24" },
    "subnetPrivateAppPrefix": { "type": "string", "defaultValue": "10.10.2.0/24" },
    "subnetPrivateDbPrefix": { "type": "string", "defaultValue": "10.10.3.0/24" },

    "vmAdminUsername": { "type": "string", "defaultValue": "azureuser" },
    "vmAdminPassword": { "type": "secureString" },

    "vmSku": { "type": "string", "defaultValue": "Standard_B2s" },
    "vmInstanceCount": { "type": "int", "defaultValue": 2, "minValue": 2, "maxValue": 4 },

    "sqlAdminUsername": { "type": "string", "defaultValue": "sqladminuser" },
    "sqlAdminPassword": { "type": "secureString" },

    "sqlSkuName": { "type": "string", "defaultValue": "Basic" },
    "sqlMaxSizeBytes": { "type": "string", "defaultValue": "2147483648" },

    "bootstrapScriptUri": {
      "type": "string",
      "metadata": { "description": "Public raw URL to scripts/bootstrap.sh (GitHub raw). Required." }
    },

    "appHealthPath": { "type": "string", "defaultValue": "/health" },
    "logRetentionDays": { "type": "int", "defaultValue": 30 }
  },
  "variables": {
    "prefix": "[toLower(concat('bbg-', parameters('env'), '-', uniqueString(resourceGroup().id)))]",

    "vnetName": "[concat(variables('prefix'), '-vnet')]",
    "publicSubnetName": "public-subnet",
    "appSubnetName": "private-app-subnet",
    "dbSubnetName": "private-db-subnet",

    "nsgPublicName": "[concat(variables('prefix'), '-nsg-public')]",
    "nsgAppName": "[concat(variables('prefix'), '-nsg-app')]",
    "nsgDbName": "[concat(variables('prefix'), '-nsg-db')]",

    "pipAgwName": "[concat(variables('prefix'), '-pip-agw')]",
    "pipNatName": "[concat(variables('prefix'), '-pip-nat')]",

    "natGwName": "[concat(variables('prefix'), '-natgw')]",
    "agwName": "[concat(variables('prefix'), '-agw')]",
    "vmssName": "[concat(variables('prefix'), '-vmss')]",

    "kvName": "[toLower(replace(concat(variables('prefix'), '-kv'), '-', ''))]",
    "stgName": "[toLower(replace(concat(variables('prefix'), 'stg'), '-', ''))]",

    "sqlServerName": "[toLower(replace(concat(variables('prefix'), '-sql'), '-', ''))]",
    "sqlDbName": "[concat(variables('prefix'), '-db')]",

    "privateDnsZoneNameSql": "privatelink.database.windows.net",
    "peNameSql": "[concat(variables('prefix'), '-sql-pe')]",

    "lawName": "[concat(variables('prefix'), '-law')]",
    "appiName": "[concat(variables('prefix'), '-appi')]",
    "cpuAlertName": "[concat(variables('prefix'), '-cpu-alert')]",

    "dbPasswordSecretName": "sql-admin-password"
  },
  "resources": [
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2023-11-01",
      "name": "[variables('nsgPublicName')]",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "Allow-Internet-To-AppGw-HTTP",
            "properties": {
              "priority": 100,
              "direction": "Inbound",
              "access": "Allow",
              "protocol": "Tcp",
              "sourceAddressPrefix": "Internet",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "80"
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2023-11-01",
      "name": "[variables('nsgAppName')]",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "Allow-AppGw-To-App-HTTP",
            "properties": {
              "priority": 100,
              "direction": "Inbound",
              "access": "Allow",
              "protocol": "Tcp",
              "sourceAddressPrefix": "[parameters('subnetPublicPrefix')]",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "80"
            }
          },
          {
            "name": "Deny-Internet-Inbound",
            "properties": {
              "priority": 200,
              "direction": "Inbound",
              "access": "Deny",
              "protocol": "*",
              "sourceAddressPrefix": "Internet",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "*"
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2023-11-01",
      "name": "[variables('nsgDbName')]",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "Allow-App-To-SQL-1433",
            "properties": {
              "priority": 100,
              "direction": "Inbound",
              "access": "Allow",
              "protocol": "Tcp",
              "sourceAddressPrefix": "[parameters('subnetPrivateAppPrefix')]",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "1433"
            }
          }
        ]
      }
    },

    {
      "type": "Microsoft.Network/publicIPAddresses",
      "apiVersion": "2023-11-01",
      "name": "[variables('pipAgwName')]",
      "location": "[parameters('location')]",
      "sku": { "name": "Standard" },
      "zones": "[parameters('zones')]",
      "properties": {
        "publicIPAllocationMethod": "Static",
        "dnsSettings": { "domainNameLabel": "[concat(variables('prefix'), '-app')]" }
      }
    },
    {
      "type": "Microsoft.Network/publicIPAddresses",
      "apiVersion": "2023-11-01",
      "name": "[variables('pipNatName')]",
      "location": "[parameters('location')]",
      "sku": { "name": "Standard" },
      "properties": { "publicIPAllocationMethod": "Static" }
    },
    {
      "type": "Microsoft.Network/natGateways",
      "apiVersion": "2023-11-01",
      "name": "[variables('natGwName')]",
      "location": "[parameters('location')]",
      "sku": { "name": "Standard" },
      "properties": {
        "publicIpAddresses": [
          { "id": "[resourceId('Microsoft.Network/publicIPAddresses', variables('pipNatName'))]" }
        ]
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/publicIPAddresses', variables('pipNatName'))]"
      ]
    },

    {
      "type": "Microsoft.Network/virtualNetworks",
      "apiVersion": "2023-11-01",
      "name": "[variables('vnetName')]",
      "location": "[parameters('location')]",
      "properties": {
        "addressSpace": { "addressPrefixes": ["[parameters('vnetAddressPrefix')]"] },
        "subnets": [
          {
            "name": "[variables('publicSubnetName')]",
            "properties": {
              "addressPrefix": "[parameters('subnetPublicPrefix')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgPublicName'))]"
              }
            }
          },
          {
            "name": "[variables('appSubnetName')]",
            "properties": {
              "addressPrefix": "[parameters('subnetPrivateAppPrefix')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgAppName'))]"
              },
              "natGateway": {
                "id": "[resourceId('Microsoft.Network/natGateways', variables('natGwName'))]"
              }
            }
          },
          {
            "name": "[variables('dbSubnetName')]",
            "properties": {
              "addressPrefix": "[parameters('subnetPrivateDbPrefix')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgDbName'))]"
              },
              "privateEndpointNetworkPolicies": "Disabled"
            }
          }
        ]
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgPublicName'))]",
        "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgAppName'))]",
        "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgDbName'))]",
        "[resourceId('Microsoft.Network/natGateways', variables('natGwName'))]"
      ]
    },

    {
      "type": "Microsoft.Storage/storageAccounts",
      "apiVersion": "2023-01-01",
      "name": "[variables('stgName')]",
      "location": "[parameters('location')]",
      "sku": { "name": "Standard_LRS" },
      "kind": "StorageV2",
      "properties": {
        "minimumTlsVersion": "TLS1_2",
        "supportsHttpsTrafficOnly": true,
        "allowBlobPublicAccess": false
      }
    },
    {
      "type": "Microsoft.Storage/storageAccounts/managementPolicies",
      "apiVersion": "2023-01-01",
      "name": "[concat(variables('stgName'), '/default')]",
      "dependsOn": [
        "[resourceId('Microsoft.Storage/storageAccounts', variables('stgName'))]"
      ],
      "properties": {
        "policy": {
          "rules": [
            {
              "name": "lifecycle-delete-old-blobs",
              "enabled": true,
              "type": "Lifecycle",
              "definition": {
                "filters": { "blobTypes": ["blockBlob"], "prefixMatch": ["static/"] },
                "actions": {
                  "baseBlob": {
                    "delete": { "daysAfterModificationGreaterThan": 90 }
                  }
                }
              }
            }
          ]
        }
      }
    },

    {
      "type": "Microsoft.KeyVault/vaults",
      "apiVersion": "2023-07-01",
      "name": "[variables('kvName')]",
      "location": "[parameters('location')]",
      "properties": {
        "tenantId": "[subscription().tenantId]",
        "sku": { "family": "A", "name": "standard" },
        "enableRbacAuthorization": false,
        "accessPolicies": []
      }
    },
    {
      "type": "Microsoft.KeyVault/vaults/secrets",
      "apiVersion": "2023-07-01",
      "name": "[concat(variables('kvName'), '/', variables('dbPasswordSecretName'))]",
      "dependsOn": [
        "[resourceId('Microsoft.KeyVault/vaults', variables('kvName'))]"
      ],
      "properties": {
        "value": "[parameters('sqlAdminPassword')]",
        "attributes": { "enabled": true }
      }
    },

    {
      "type": "Microsoft.Sql/servers",
      "apiVersion": "2023-05-01-preview",
      "name": "[variables('sqlServerName')]",
      "location": "[parameters('location')]",
      "properties": {
        "administratorLogin": "[parameters('sqlAdminUsername')]",
        "administratorLoginPassword": "[parameters('sqlAdminPassword')]",
        "publicNetworkAccess": "Disabled",
        "minimalTlsVersion": "1.2"
      }
    },
    {
      "type": "Microsoft.Sql/servers/databases",
      "apiVersion": "2023-05-01-preview",
      "name": "[concat(variables('sqlServerName'), '/', variables('sqlDbName'))]",
      "location": "[parameters('location')]",
      "sku": { "name": "[parameters('sqlSkuName')]" },
      "properties": {
        "maxSizeBytes": "[parameters('sqlMaxSizeBytes')]",
        "zoneRedundant": "[not(equals(parameters('env'), 'dev'))]"
      },
      "dependsOn": [
        "[resourceId('Microsoft.Sql/servers', variables('sqlServerName'))]"
      ]
    },

    {
      "type": "Microsoft.Network/privateDnsZones",
      "apiVersion": "2020-06-01",
      "name": "[variables('privateDnsZoneNameSql')]",
      "location": "global",
      "properties": {}
    },
    {
      "type": "Microsoft.Network/privateDnsZones/virtualNetworkLinks",
      "apiVersion": "2020-06-01",
      "name": "[concat(variables('privateDnsZoneNameSql'), '/', variables('vnetName'), '-link')]",
      "location": "global",
      "properties": {
        "virtualNetwork": { "id": "[resourceId('Microsoft.Network/virtualNetworks', variables('vnetName'))]" },
        "registrationEnabled": false
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/privateDnsZones', variables('privateDnsZoneNameSql'))]",
        "[resourceId('Microsoft.Network/virtualNetworks', variables('vnetName'))]"
      ]
    },
    {
      "type": "Microsoft.Network/privateEndpoints",
      "apiVersion": "2023-11-01",
      "name": "[variables('peNameSql')]",
      "location": "[parameters('location')]",
      "properties": {
        "subnet": {
          "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('vnetName'), variables('dbSubnetName'))]"
        },
        "privateLinkServiceConnections": [
          {
            "name": "sql-connection",
            "properties": {
              "privateLinkServiceId": "[resourceId('Microsoft.Sql/servers', variables('sqlServerName'))]",
              "groupIds": ["sqlServer"]
            }
          }
        ]
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworks', variables('vnetName'))]",
        "[resourceId('Microsoft.Sql/servers', variables('sqlServerName'))]"
      ]
    },
    {
      "type": "Microsoft.Network/privateEndpoints/privateDnsZoneGroups",
      "apiVersion": "2023-11-01",
      "name": "[concat(variables('peNameSql'), '/sql-dns-zone-group')]",
      "properties": {
        "privateDnsZoneConfigs": [
          {
            "name": "sqlZoneConfig",
            "properties": {
              "privateDnsZoneId": "[resourceId('Microsoft.Network/privateDnsZones', variables('privateDnsZoneNameSql'))]"
            }
          }
        ]
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/privateEndpoints', variables('peNameSql'))]",
        "[resourceId('Microsoft.Network/privateDnsZones', variables('privateDnsZoneNameSql'))]"
      ]
    },

    {
      "type": "Microsoft.Network/applicationGateways",
      "apiVersion": "2023-11-01",
      "name": "[variables('agwName')]",
      "location": "[parameters('location')]",
      "zones": "[parameters('zones')]",
      "sku": { "name": "Standard_v2", "tier": "Standard_v2" },
      "properties": {
        "autoscaleConfiguration": {
          "minCapacity": 1,
          "maxCapacity": 2
        },
        "gatewayIPConfigurations": [
          {
            "name": "appGatewayIpConfig",
            "properties": {
              "subnet": {
                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('vnetName'), variables('publicSubnetName'))]"
              }
            }
          }
        ],
        "frontendIPConfigurations": [
          {
            "name": "frontendPublicIp",
            "properties": {
              "publicIPAddress": { "id": "[resourceId('Microsoft.Network/publicIPAddresses', variables('pipAgwName'))]" }
            }
          }
        ],
        "frontendPorts": [
          { "name": "port80", "properties": { "port": 80 } }
        ],
        "backendAddressPools": [
          { "name": "vmssPool", "properties": {} }
        ],
        "backendHttpSettingsCollection": [
          {
            "name": "httpSettings",
            "properties": {
              "port": 80,
              "protocol": "Http",
              "cookieBasedAffinity": "Disabled",
              "requestTimeout": 30,
              "probe": { "id": "[concat(resourceId('Microsoft.Network/applicationGateways', variables('agwName')), '/probes/healthProbe')]" }
            }
          }
        ],
        "probes": [
          {
            "name": "healthProbe",
            "properties": {
              "protocol": "Http",
              "path": "[parameters('appHealthPath')]",
